--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,12 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.sql.inispring.jpa.database=POSTGRESQL
+spring.jpa.database=POSTGRESQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/mrs
 spring.datasource.username=mrs
 spring.datasource.password=mrs
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.properties.hibernate.format_sql=true
-spring.datasource.sql-script-encoding=UTF-8
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.defer-datasource-initialization=true
+spring.jpa.hibernate.ddl-auto=create
 spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.properties.format_sql=true
+spring.sql.init.encoding=UTF-8
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE 
