--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,14 @@
  			<groupId>javax.validation</groupId>
  			<artifactId>validation-api</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+        	<groupId>org.thymeleaf.extras</groupId>
+        	<artifactId>thymeleaf-extras-springsecurity5</artifactId><!-- versionは5 -->
+        </dependency>
 	</dependencies>
 
 	<build>
